added clean mode

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,5 @@
-CC      = /opt/gbdk/bin/lcc -Wa-l -Wl-m -Wl-j
-
-BINS    = main.gb 
+CC      = /opt/gbdk/bin/lcc -Dname=CLEAN -Wa-l -Wl-m -Wl-j
+BINS    = main.gb
 
 all:    $(BINS)
 
@@ -8,17 +7,17 @@ make.bat: Makefile
 		echo "REM Automatically generated from Makefile" > make.bat
 		make -sn | sed y/\\//\\\\/ | grep -v make >> make.bat
 
-%.o:    %.c
-		$(CC) -c -o $@ $<
+%.o: %.c
+	$(CC) -c -o $@ $<
 
-%.s:    %.c
-		$(CC) -S -o $@ $<
+%.s: %.c
+	$(CC) -S -o $@ $<
 
-%.o:    %.s
-		$(CC) -c -o $@ $<
+%.o: %.s
+	$(CC) -c -o $@ $<
 
-%.gb:   %.o
-		$(CC) -o $@ $<
+%.gb: %.o
+	$(CC) -o $@ $<
 
 clean:
 		rm -f *.o *.lst *.map *.gb *~ *.rel *.cdb *.ihx *.lnk *.sym *.asm
